# alacritty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  Makefile  README.md  flake.nix
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  upload_asset.sh
alacritty/: Cargo.toml
alacritty/src/: cli.rs  daemon.rs  event.rs  main.rs  scheduler.rs  tab_panel.rs  web_url.rs  window_context.rs  window_kind.rs
alacritty/tests/: webview_cursor_smoke.rs  webview_passkey_flow_smoke.rs  webview_smoke.rs
docs/: escape_support.md  features.md  ipc.md  webauthn-entitlement-request.md
extra/: tabor.info
extra/completions/: _tabor  tabor.bash  tabor.fish
extra/linux/: Tabor.desktop  org.tabor.Tabor.appdata.xml
extra/man/: tabor-bindings.5.scd  tabor-msg.1.scd  tabor.1.scd  tabor.5.scd
extra/osx/: Tabor.entitlements
scripts/: README.md  create-flamegraph.sh  web-popup-smoke.sh
tabor/: Cargo.toml  build.rs
tabor/src/: cli.rs  clipboard.rs  daemon.rs  event.rs  ipc.rs  logging.rs  main.rs  message_bar.rs  panic.rs  scheduler.rs  tabs.rs  window_context.rs  window_kind.rs
tabor/tests/: webview_inspector_smoke.rs  webview_passkey_smoke.rs  webview_smoke.rs
tabor/windows/: tabor.rc
tabor_config/: Cargo.toml
tabor_config/src/: lib.rs
tabor_config_derive/: Cargo.toml
tabor_config_derive/src/: lib.rs  serde_replace.rs
tabor_config_derive/tests/: config.rs
tabor_terminal/: CHANGELOG.md  Cargo.toml
tabor_terminal/src/: event_loop.rs  lib.rs
tabor_terminal/tests/: ref.rs
(+120 files in other folders)
